Updated pom.xml to allow JMockit tests to run on JDK 9 or greater