@@ -141,6 +141,16 @@
                     </execution>
                 </executions>
             </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M3</version>
+				<configuration>
+					<argLine>
+						-Djdk.attach.allowAttachSelf <!-- required to run test with jmockit on JDK 9 -->
+					</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
